<resources>
    <string name="app_name">BasicPhrases</string>
    <string name="hello">Hello</string>
    <string name="howareyou">HowAreYou</string>
    <string name="please">Please</string>
    <string name="welcome">Welcome</string>
    <string name="i_live_in">I Live In</string>
    <string name="my_name_is">My Name Is</string>
    <string name="good_evening">Good Evening</string>
    <string name="do_you_speak_english">Do You \nSpeak English ?</string>
</resources>
